support successPolicy and failurePolicy

run codegen


support watch pg and preemptable label


fix test case


fix test case


fix test case


refactor


fix make


fix test


add corev1 schema


add podgroups crd


remove watch podgroups


fix test


fix test


check elasticPolicy nil


refactor label.go


fix python sdk
